# mlq-inspect

./: .gitignore  LICENSE  README.md  pyproject.toml  reference_data.csv
.github/workflows/: ci.yml
mlq/: __init__.py  drift.py  explainer.py  inspector.py  loader.py  main.py  report.html.j2  reporter.py  utils.py
tests/: __init__.py  conftest.py  test_drift.py  test_inspector.py  test_loader.py
