[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlq"
version = "0.1.0"
description = "Inspect, explain and audit ML models from your terminal"
readme = "README.md"
authors = [{name = "MLQ Team"}]
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "shap>=0.45",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "black>=23",
    "mypy>=1.0",
]

[project.scripts]
mlq = "mlq.main:app"

[tool.setuptools]
packages = ["mlq"]

[tool.setuptools.package-data]
mlq = ["*.j2"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
